syntax = "proto3";
package transaction;

import "google/protobuf/struct.proto";

option go_package = "github.com/decentrio/sorobook-api/types/transaction";

message Transaction {
  string hash = 1;
  string status = 2;
  uint32 ledger = 3;
  uint32 application_order = 4;
  bytes envelope_xdr = 5;
  bytes result_xdr = 6;
  bytes result_meta_xdr = 7;
  string source_address = 8;
}

message TransactionInfo {
  string hash = 1;
  string status = 2;
  uint32 ledger = 3;
  uint32 application_order = 4;
  google.protobuf.Struct envelope = 5;
  google.protobuf.Struct result = 6;
  google.protobuf.Struct result_meta = 7;
  string source_address = 8;
}

message TransactionRequest { string hash = 1; }

message TransactionResponse {
  TransactionInfo transaction = 1;
  bool found = 2;
}

message TransactionsByAddressRequest {
  string address = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message TransactionsByAddressResponse {
  repeated TransactionInfo txs = 1;
}

message TransactionsAtLedgerSeqRequest {
  uint32 ledger = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message TransactionsAtLedgerSeqResponse {
  repeated TransactionInfo txs = 1;
}

message TransactionsAtLedgerHashRequest {
  string ledger_hash = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message TransactionsAtLedgerHashResponse {
  repeated TransactionInfo txs = 1;
}

message ContractTransactionsRequest {
  string contract = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message ContractTransactionsResponse {
  repeated TransactionInfo txs = 1;
}

message UserContractTransactionsRequest {
  string contract = 1;
  string address = 2;
}

message UserContractTransactionsResponse {
  repeated TransactionInfo txs = 1;
}